--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   2. 정보주체의 권리,의무 및 그 행사방법</span></strong><br>
 &nbsp;이용자는 개인정보주체로서 다음과 같은 권리를 행사할 수 있습니다.<br>
-정보주체는 <캐리어 저온저장고>에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.<br>
+정보주체는 <UCC 저온창고>에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.<br>
  &nbsp;&nbsp;가. 개인정보 열람요구<br>
  &nbsp;&nbsp;나. 오류 등이 있을 경우 정정 요구<br>
  &nbsp;&nbsp;다. 삭제요구<br>
@@ -42,7 +42,7 @@
 
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   3. 처리하는 개인정보의 항목 작성</span></strong><br>
-&nbsp;<캐리어 저온저장고>은(는) 다음의 개인정보 항목을 처리하고 있습니다.<br>
+&nbsp;<UCC 저온창고>은(는) 다음의 개인정보 항목을 처리하고 있습니다.<br>
 &nbsp;&nbsp; 가. <에러 알림시 안드로이드 디바이스를 구분하기 위한 안드로이드 고유번호 수집><br>
 &nbsp;&nbsp; - 필수항목 : android.permission.GET_ACCOUNTS<br>
 안드로이드 디바이스를 구분하기 위한 안드로이드 고유번호 수집 이외의 전화 번호를 포함한 어떠한 자료도 수집, 처리 하지 않습니다.
