--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   1. 개인정보의 처리 목적</span></strong><br>
-&nbsp;<UCC 저온창고>(이하 ‘UCC 저온창고’) 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.<br>
+&nbsp;<‘UCC 저온창고’>(이하 ‘UCC 저온창고’) 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.<br>
 - 에러 알림시 안드로이드 디바이스를 구분하기 위함.</p>
         
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
