--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   2. 정보주체의 권리,의무 및 그 행사방법</span></strong><br>
 &nbsp;이용자는 개인정보주체로서 다음과 같은 권리를 행사할 수 있습니다.<br>
-정보주체는 <UCC 저온창고>에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.<br>
+정보주체는 <‘UCC 저온창고’>에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.<br>
  &nbsp;&nbsp;가. 개인정보 열람요구<br>
  &nbsp;&nbsp;나. 오류 등이 있을 경우 정정 요구<br>
  &nbsp;&nbsp;다. 삭제요구<br>
@@ -42,20 +42,20 @@
 
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   3. 처리하는 개인정보의 항목 작성</span></strong><br>
-&nbsp;<UCC 저온창고>은(는) 다음의 개인정보 항목을 처리하고 있습니다.<br>
+&nbsp;<‘UCC 저온창고’>은(는) 다음의 개인정보 항목을 처리하고 있습니다.<br>
 &nbsp;&nbsp; 가. <에러 알림시 안드로이드 디바이스를 구분하기 위한 안드로이드 고유번호 수집><br>
 &nbsp;&nbsp; - 필수항목 : android.permission.GET_ACCOUNTS<br>
 안드로이드 디바이스를 구분하기 위한 안드로이드 고유번호 수집 이외의 전화 번호를 포함한 어떠한 자료도 수집, 처리 하지 않습니다.
 
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   4. 개인정보의 파기</span></strong><br>
-&nbsp;<UCC 저온창고>은(는) 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다.<br>
+&nbsp;<‘UCC 저온창고’>은(는) 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다.<br>
 파기의 절차, 기한 및 방법은 다음과 같습니다.<br>
 &nbsp;- 앱 삭제&nbsp;시 더 이상 위 권한을 사용하지 않습니다.</p>
       
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   5. 개인정보의 안전성 확보 조치</span></strong><br>
-&nbsp;<UCC 저온창고>은(는) 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.<br>
+&nbsp;<‘UCC 저온창고’>은(는) 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.<br>
 &nbsp;&nbsp;가. 내부관리계획의 수립 및 시행개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.<br>
 &nbsp;&nbsp;나. 개인정보에 대한 접근 제한개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.<br>
 &nbsp;&nbsp;다. 비인가자에 대한 출입 통제개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.<br>
