--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="main-content">
       <h1>
-<a id="UCC-저온창고-안드로이드-앱-개인정보-취급방침" class="anchor" href="#ucc-%EC%A0%80%EC%98%A8%EC%B0%BD%EA%B3%A0-%ED%8E%98%EC%9D%B4%EC%A7%80%EC%97%90-%EC%98%A4%EC%8B%A0%EA%B2%83%EC%9D%84-%ED%99%98%EC%98%81%ED%95%A9%EB%8B%88%EB%8B%A4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>UCC 저온창고 안드로이드 앱 개인정보 취급방침</h1>
+<a id="UCC-저온창고-앱-개인정보-취급방침" class="anchor" href="#ucc-%EC%A0%80%EC%98%A8%EC%B0%BD%EA%B3%A0-%ED%8E%98%EC%9D%B4%EC%A7%80%EC%97%90-%EC%98%A4%EC%8B%A0%EA%B2%83%EC%9D%84-%ED%99%98%EC%98%81%ED%95%A9%EB%8B%88%EB%8B%A4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>UCC 저온창고 앱 개인정보 취급방침</h1>
  
       <!--img src="https://cloud.githubusercontent.com/assets/24535230/21215193/f052f26e-c2e2-11e6-9eeb-a5c644527156.png"-->
       
@@ -28,7 +28,7 @@
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   1. 개인정보의 처리 목적</span></strong><br>
 &nbsp;<‘UCC 저온창고’>(이하 ‘UCC 저온창고’) 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.<br>
-- 에러 알림시 안드로이드 디바이스를 구분하기 위함.</p>
+- 에러 알림시 아이폰 디바이스를 구분하기 위함.</p>
         
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   2. 정보주체의 권리,의무 및 그 행사방법</span></strong><br>
@@ -38,12 +38,12 @@
  &nbsp;&nbsp;나. 오류 등이 있을 경우 정정 요구<br>
  &nbsp;&nbsp;다. 삭제요구<br>
  &nbsp;&nbsp;라. 처리정지 요구<br>
-  안드로이드 디바이스 고유번호 외에는 정보를 수집 하지 않으므로, 사용자가 직접 앱을 삭제 하여 처리 할 수 있습니다.</p>
+  아이폰 디바이스 고유번호 외에는 정보를 수집 하지 않으므로, 사용자가 직접 앱을 삭제 하여 처리 할 수 있습니다.</p>
 
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   3. 처리하는 개인정보의 항목 작성</span></strong><br>
 &nbsp;<‘UCC 저온창고’>은(는) 다음의 개인정보 항목을 처리하고 있습니다.<br>
-&nbsp;&nbsp; 가. <에러 알림시 안드로이드 디바이스를 구분하기 위한 안드로이드 고유번호 수집><br>
+&nbsp;&nbsp; 가. <에러 알림시 아이폰 디바이스를 구분하기 위한 아이폰 고유번호 수집><br>
 &nbsp;&nbsp; - 필수항목 : android.permission.GET_ACCOUNTS<br>
 안드로이드 디바이스를 구분하기 위한 안드로이드 고유번호 수집 이외의 전화 번호를 포함한 어떠한 자료도 수집, 처리 하지 않습니다.
 
