--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   3. 처리하는 개인정보의 항목 작성</span></strong><br>
 &nbsp;<‘UCC 저온창고’>은(는) 다음의 개인정보 항목을 처리하고 있습니다.<br>
 &nbsp;&nbsp; 가. <에러 알림시 아이폰 디바이스를 구분하기 위한 아이폰 고유번호 수집><br>
-&nbsp;&nbsp; - 필수항목 : android.permission.GET_ACCOUNTS<br>
-안드로이드 디바이스를 구분하기 위한 안드로이드 고유번호 수집 이외의 전화 번호를 포함한 어떠한 자료도 수집, 처리 하지 않습니다.
+<!--&nbsp;&nbsp; - 필수항목 : android.permission.GET_ACCOUNTS<br-->
+아이폰 디바이스를 구분하기 위한 아이폰 고유번호 수집 이외의 전화 번호를 포함한 어떠한 자료도 수집, 처리 하지 않습니다.
 
 <p><strong style="color: rgb(67, 116, 172); font-family: 'Nanum BarunGothic'; letter-spacing: -1px;"><span style="font-family: '맑은 고딕', sans-serif;">
   4. 개인정보의 파기</span></strong><br>
